Revision history for Perl module {{$dist->name}}

{{$NEXT}}

1.15      2020-08-28 09:50:28 -0600
  - Move inline tests from this distro to Acme::Alien::DontPanic
    and Acme::Alien::DontPanic2 (gh#22)

1.14      2020-02-05 19:08:06 -0700
  - Add use strict and warnings to generated Install/Files.pm
    modules (gh#17)

1.12      2020-02-02 06:00:12 -0700
  - Add List::Util and Text::ParseWords prereqs back.
    They were accidentally removed from prereqs in 1.10.
    (gh#16)

1.11      2020-01-31 13:52:17 -0700
  - Remove test dependency on Acme::Alien::DontPanic
    (it should be optional) introduced in 1.10.

1.10      2020-01-30 07:57:09 -0700
  - Production release identical to 1.09_01

1.09_01   2020-01-29 20:10:24 -0700
  - internal refactor, Dist::Zilla, perlcritic, etc. (gh#15)

1.08 2019-11-25 08:36:38 -0700
  - Added alien_install_type property (gh#14)

1.07 2019-11-22 16:01:56 -0700
  - Fix bug in blib detection (gh#13)
  - Update documentation to reflect defaults for %s (gh#12, gh#13)

1.06 2018-12-15 20:34:11 -0700
  - Require Archive::Tar 1.40 for pax_global_header fix

1.05 2018-08-29 16:53:39 -0400
  - Documentation improvements
  - Improve diagnostics for HTTP connection failures (gh#6, gh#7)

1.04 2018-06-06 09:00:21 -0400
  - ALIEN_INSTALL_TYPE is now fully compatible with Alien::Build
    Previously there were some edge cases with setting it to
    'default'

1.03 2018-05-09 08:15:56 -0400
  - Fix warning

1.02 2018-03-11 14:33:44 -0400
  - Production release identical to 1.01_01

1.01_01 2018-03-09 17:40:12 -0500
  - Allow changing protocol with environment variables.

1.00 2017-10-01 06:21:53 -0400
  - Remove Alien::Base::PkgConfig
  - Require Alien::Build::PkgConfig 1.20

0.046 2017-09-13 20:54:21 -0400
  - Run alien_install_commands before any Perl tests in t/

0.045 2017-08-29 04:51:05 -0400
  - Fix broken skip in t/alien_base_modulebuild_pkgconfig.t

0.044 2017-08-23 13:20:29 -0400