@@ -919,9 +919,10 @@ subtest 'ALIEN_FORCE and ALIEN_INSTALL_TYPE vars' => sub {
 
 };
 
-subtest 'alien_install_network' => sub {
+subtest 'alien_install_network method' => sub {
 
   local $ENV{ALIEN_INSTALL_NETWORK};
+  delete $ENV{ALIEN_INSTALL_NETWORK};
 
   is(
     Alien::Base::ModuleBuild->alien_install_network,
@@ -944,6 +945,65 @@ subtest 'alien_install_network' => sub {
     Alien::Base::ModuleBuild->alien_install_network,
     '',
     'ALIEN_INSTALL_NETWORK=0',
+  );
+
+};
+
+subtest 'alien_download_rule method' => sub {
+
+  local $ENV{ALIEN_DOWNLOAD_RULE};
+  delete $ENV{ALIEN_DOWNLOAD_RULE};
+
+  is(
+    Alien::Base::ModuleBuild->alien_download_rule,
+    'warn',
+    'default',
+  );
+
+  $ENV{ALIEN_DOWNLOAD_RULE} = 'default';
+
+  is(
+    Alien::Base::ModuleBuild->alien_download_rule,
+    'warn',
+    'explicit default',
+  );
+
+  foreach my $value (qw( warn digest encrypt digest_or_encrypt digest_and_encrypt ))
+  {
+    $ENV{ALIEN_DOWNLOAD_RULE} = $value;
+
+    is(
+      Alien::Base::ModuleBuild->alien_download_rule,
+      $value,
+      "override $value",
+    );
+  }
+
+  $ENV{ALIEN_DOWNLOAD_RULE} = 'bogus';
+
+  my @warnings;
+
+  local $SIG{__WARN__} = sub {
+    my($message) = @_;
+    if($message =~ /^unknown ALIEN_DOWNLOAD_RULE/) {
+      push @warnings, $message;
+    } else {
+      print STDERR $message;
+    }
+  };
+
+  is(
+    Alien::Base::ModuleBuild->alien_download_rule,
+    'warn',
+    'bogus value reverts to default',
+  );
+
+  is(
+    \@warnings,
+    array {
+      item match qr/unknown ALIEN_DOWNLOAD_RULE "ALIEN_DOWNLOAD_RULE", using "warn" instead/;
+    },
+    'emitted expected warnings',
   );
 
 };
